--- a/projectchuan/.settings/org.eclipse.core.resources.prefs
+++ b/projectchuan/.settings/org.eclipse.core.resources.prefs
@@ -5,4 +5,5 @@ encoding//src/main/webapp/WEB-INF/views/dangnhap.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/header.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/trangchu.jsp=UTF-8
 encoding//src/main/webapp/resource/css/login.css=UTF-8
+encoding//src/main/webapp/resource/css/trangchu.css=UTF-8
 encoding/<project>=UTF-8
